engine/crates/integration-tests/tests/graphql_connector/snapshots/integration_tests__graphql_connector__basic__namespaced-null.snap
---
source: crates/integration-tests/tests/graphql_connector/basic.rs
expression: "engine.execute(NAMESPACED_QUERY).variables(json!({\n                    \"id\" : \"4\"\n                })).await.into_value()"
---
{
  "data": {
    "gothub": {
      "pullRequestOrIssue": null,
      "serverVersion": "1"
    }
  }
}
