engine/crates/integration-tests/tests/graphql_connector/snapshots/integration_tests__graphql_connector__basic__unnamespaced-null.snap
---
source: crates/integration-tests/tests/graphql_connector/basic.rs
expression: "engine.execute(UNNAMESPACED_QUERY).variables(json!({\n                    \"id\" : \"4\"\n                })).await.into_value()"
---
{
  "data": {
    "pullRequestOrIssue": null,
    "serverVersion": "1"
  }
}
